--- a/Medhelp/src/index.css
+++ b/Medhelp/src/index.css
@@ -53,7 +53,7 @@ header {
 }
 .main-header {
     height: 300px;
-    background: url("sayandeveloper.github.io/Medhelp/assets/pulse.jpg") center no-repeat;
+    background: url("https://sayandeveloper.github.io/Medhelp/assets/pulse.jpg") center no-repeat;
     background-size: cover;
     position: relative;
 }
